--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Tubes project
 email: seven-4-seven@yandex.ru
 description: > # this means to ignore newlines until "baseurl:"
   Продажа метализделий из труб
-baseurl: "/tubes" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://seven-4-seven.github.io" # the base hostname & protocol for your site
 github_username:  seven-4-seven
 
